# AudioLAB

./: .gitmodules  2PACRBJ12.cpp  2PACSV3.cpp  2PACSV8.cpp  ADSR.cpp  ADSR.h  AR.cpp  AR.h  ASR.cpp  ASR.h  AdalineSVF.cpp  Amplifiers.i  Amplifiers_wrap.cxx  Analog.i  Analog.py  AnalogSVF.cpp  AnalogSVF.h  Analog_wrap.cxx  BasicSynth.cpp  BesselBandPassFilter.cpp  BesselBandPassFilter.h  Biquad.cpp  BlitOscillator.cpp  BlitOscillator.h  CPUADSR.hpp  CPUSoundObject.hpp  CppFilters.cpp  DARKTHEORY.cpp  DSPFilters.cpp  DistortionBox.cpp  EvolverSVF.cpp  FADSR.cpp  FAR.cpp  FASR.cpp  FAUSTFX.cpp  FFT128BEQ.cpp  FFT13OF.cpp  FFTHARMEQ.cpp  FFTOCTF.cpp  FIRFilter.cpp  (+554 more)
Amplifier/: ClipperCircuit.hpp
Analog/: ...swg  ..swg  Amplifiers.i  Analog.hpp  Analog.i  Analog_wrap.cxx  Py...swg  Py..swg  PyVAAnalogSVF.py  PyVAAnalogSVF.swg  PyVAAnalogSVF.swg.swg  PyVAAnalogSVF_wrap.cxx  PyVABandLimitedOscillators.swg  PyVABlitOscillators.swg  PyVABlitSawOscillator.swg  PyVABlitSquareOscillator.swg  PyVABlitTriangleOscillator.swg  PyVADPWOscillators.swg  PyVADPWPulseOscillator.swg  PyVADiode.swg  (+809 more)
Electric-Frankenstein/: CMakeLists.txt  chebystein.lua  eigen-array.hpp  eigen-array.i  eigen-matrix.i  eigen-vector.hpp  eigen.i  eigen_wrap.cxx  electric-frankenstein.cpp  electric-frankenstein.hpp  electric-frankenstein_wrap.cxx  electric_frankenstein_quadratic.cpp  electric_frankenstein_quadratic_gain.cpp  electric_svf.cpp  frankenstein  frankenstein.py  frankenstein_quadratic  frankentorch.cpp  make_eigen.sh  make_electric_frankenstein.sh  ml_helpers.hpp  quadractic.sh  svf  svf.net  svf.sh
(+3169 files in other folders)
